--- a/quiz1_ias_python.ipynb
+++ b/quiz1_ias_python.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "Target = Si sucedió el *robo* del bien material toma valor 1, si no sucedio el mismo toma valor 0, dummy/binaria/indicadora\n",
     "\n",
-    "La actividad tiene como objetivo realizar un pre-procesamiento y análisis completo de los datos para luego plantear un modelo predictivo de clasificación (machine learning) que sirva par "
+    "La actividad tiene como objetivo realizar un pre-procesamiento y análisis exploratorio de los datos, para el planteo de un hipotético un modelo predictivo de clasificación (machine learning) que serviría luego para predecir si sucederá o no un robo."
    ]
   },
   {
